--- a/assets/css/widgets.css
+++ b/assets/css/widgets.css
@@ -15,8 +15,8 @@
     margin: 1rem 0;
     margin-bottom: 30px;
     padding: 1em;
-    border: 1px solid #e8e8e8;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
+    border: 1px solid var(--global-border-color);
+    box-shadow: none;
     border-radius: 8px;
     background: #fff;
 }
@@ -39,7 +39,7 @@
     margin: -1rem;
     margin-bottom: 1rem;
     padding: 1rem;
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid var(--global-border-color);
 }
 
 .widget li {
